--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
-	<title>Contact Card App</title>
+	<title>Contact Card</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<script src="jquery.min.js"></script>
 	<script src="scripts.js"></script>
